--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,16 @@
 <body>
     <app-root></app-root>
 
-
-    <!-- Essential javascripts for application to work-->
     <script src="assets/js/jquery-3.2.1.min.js"></script>
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/plugins/chart.js"></script>
     <script src="assets/js/main.js"></script>
     <!-- The javascript plugin to display page loading on top-->
     <script src="assets/js/plugins/pace.min.js"></script>
+
+    <script type="text/javascript" src="assets/js/plugins/bootstrap-notify.min.js"></script>
+    <script type="text/javascript" src="assets/js/plugins/sweetalert.min.js"></script>
 </body>
 
 </html>
